--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-  #   - images/a_dot_ham.jpeg
+    - assets/derecho.png
+    - assets/izquierdo.png
+    - assets/SmartVisionPortada.jpeg
+    - assets/warning.png
+    # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
