--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: anthony
+name: farnsworth
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -23,9 +23,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -48,11 +45,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
-    - assets/derecho.png
-    - assets/izquierdo.png
-    - assets/SmartVisionPortada.jpeg
-    - assets/warning.png
+    - lib/assets/
+    - lib/assets/derecho.png
+    - lib/assets/izquierdo.png
+    - lib/assets/SmartVisionPortada.jpeg
+    - lib/assets/warning.png
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
