--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,16 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
   shared_preferences: ^2.0.6
+  flutter_spinkit: ^4.1.2
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
+  
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -57,6 +63,8 @@ flutter:
     - lib/assets/D15E.jpg
     - lib/assets/CONFIG.jpg
     - lib/assets/FONDO.jpg
+    - lib/assets/RESULTS.jpg
+    - lib/assets/binocular.png
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
