--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: "^0.9.1"
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "icon/LOGO.jpg"
   
 
 
@@ -52,12 +57,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/
+    - lib/assets/ 
     - lib/assets/derecho.png
     - lib/assets/izquierdo.png
     - lib/assets/SmartVisionPortada.jpeg
     - lib/assets/warning.png
-    - lib/assets/LOGO.jpg
     - lib/assets/HUE100.jpg
     - lib/assets/D15.jpg
     - lib/assets/D15E.jpg
