--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dev_dependencies:
   flutter_launcher_icons: "^0.9.1"
 
 flutter_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
   image_path: "icon/LOGO.jpg"
   
